--- a/exp/Explainer.html
+++ b/exp/Explainer.html
@@ -16,7 +16,7 @@
                 <li style="color: green;">Green Bot: Specialist in Manufacturing Overhead.</li></b>
             </ul>
         </li>
-        <li>Ask questions relevant to their expertise to gather useful insights. If you ask something outside their expertise, they will suggest consulting another agent.</li>
+        <li>Ask questions relevant to their expertise to gather useful insights. If you ask something outside their expertise, they will suggest consulting another virtual colleague.</li>
         <li>You will have <b>1 minute to gather as much information as possible</b>.</li>
     </ul>
     <p>
