--- a/exp/Background.html
+++ b/exp/Background.html
@@ -2,7 +2,7 @@
 {{ block content }}
 
 <p>
-    As a controller of Acme LLC, you were tasked to prepare the Cost of Goods Sold Budget and its corresponding CO2 Emission Budget for the Year Ending December 31, 2025.
+    As a controller of Acme LLC, <b>you were tasked to prepare the Cost of Goods Sold Budget and its corresponding CO2 Emission Budget</b> for the Year Ending December 31, 2025.
 </p>
 
 <!-- <p>
@@ -88,6 +88,10 @@
     <li style="background-color: #fff1b8; padding: 5px;">Value has to be budgeted by you, virtual colleagues can help reduce uncertainty</li>
     <li style="background-color: #e6f7ff; padding: 5px;">Value is automatically calculated</li>
 </ul>
+
+<p>
+    Note that the <b>CO2 emission intensity</b> for Acme LLC was determined by a consultancy at a <b>fixed rate of 0.26 kg/$</b>. This means that for every dollar spent, 0.26 kg of CO2 is emitted. This value is fixed and <b>will not change during the experiment</b>.
+</p>
 
 <p>
     On the next screen, you will be presented with <b>three knowledge questions</b>. You must answer <b>all of them correctly to proceed</b>. If you fail to do so, you will not be allowed to participate in the study.
