--- a/exp/Decision.html
+++ b/exp/Decision.html
@@ -21,6 +21,9 @@
 <p>
     Please <b>answer the following questions</b> regarding your Cost of Goods Sold Budget and its corresponding CO2 Emission Budget for the Year Ending December 31, 2025.
 </p>
+<p>
+    Recall that <b>your goal is to minimize your budgetary deviance</b> (i.e., Static-Budget Variance = Actual Results - Budgeted Reults).
+</p>
 
 <!-- Existing Decision Form -->
 <p>
