--- a/exp/Introduction.html
+++ b/exp/Introduction.html
@@ -13,7 +13,7 @@
 <ol>
     <li>
         <b>Instructions:</b> First, you will receive accounting information about a hypothetical company, Acme LLC. 
-        You will take on the role of a management accountant tasked with preparing the <b>Cost of Goods Sold Budget</b> and the corresponding <b>CO2 Emission Budget</b> for the Year Ending December 31, 2025.
+        You will take on the role of a controller tasked with preparing the <b>Cost of Goods Sold Budget</b> and the corresponding <b>CO2 Emission Budget</b> for the Year Ending December 31, 2025.
     </li>
     <li>
         <b>Gather Information:</b> To inform your budget, you can <b>interact with virtual colleagues</b>. 
