--- a/exp/Condition1.html
+++ b/exp/Condition1.html
@@ -4,7 +4,7 @@
         <b style="color: green;">Congratulations on answering the knowledge questions correctly!</b>
     </p>
     <p>
-        You are now allowed to proceed with the study. Your manager will evaluate your performance and determine <b>your compensation based on</b> the factors below:
+        You are now allowed to proceed with the study. Your performance will be evaluated as described below:
     </p>
     <p>
         <b>Base Compensation:</b> USD 3.
@@ -15,26 +15,36 @@
     
     {% if condition == 'Cost Impact Focus' %}
     <ol>
+        <p>
         <li>
-            <b>The Deviance between the Actual Cost of Goods Sold (COGS) and the Budget:</b> 
+            <b>The Deviance (i.e., the Static-Budget Variance*) between the Actual Cost of Goods Sold (COGS) and your Budget:</b> 
             Your virtual colleagues have all the information to get the Deviance down to zero. The lower the deviance, the higher your bonus.
         </li>
+        </p>
         <li>
             <b>Your Engagement with Virtual Colleagues:</b> 
             While engaging with your virtual colleagues can help reduce uncertainty, more engagement reduces your bonus.
         </li>
     </ol>
+    <p>
+        * Static-Budget Variance = Actual Results - Budgeted Results
+    </p>
     {% elif condition == 'Environmental Impact Focus' %}
     <ol>
+        <p>
         <li>
-            <b>The Deviance between the Actual CO2 Emissions and the Budget:</b> 
+            <b>The Deviance (i.e., the Static-Budget Variance*) between the Actual CO2 Emissions and your Budget:</b> 
             Your virtual colleagues have all the information to get the Deviance down to zero. The lower the deviance, the higher your bonus.
         </li>
+        </p>
         <li>
             <b>Your Engagement with Virtual Colleagues:</b> 
             While engaging with your virtual colleagues can help reduce uncertainty, more engagement reduces your bonus.
         </li>
     </ol>
+    <p>
+        * Static-Budget Variance = Actual Results - Budgeted Results
+    </p>
     {% endif %}
     <p>
         {{ next_button }}
