spec_design draft

--- a/stakeholder/Checks.html
+++ b/stakeholder/Checks.html
@@ -43,13 +43,11 @@
     3. When considering <b>internal stakeholders</b>, who did you think about? (Select all that apply)
 </p>
 <ol id="internal-stakeholders-list">
-    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Investors</li>
-    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Suppliers</li>
-    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Customers</li>
-    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Regulators</li>
-    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> NGOs</li>
-    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Community</li>
-    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Media</li>
+    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Employees</li>
+    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Executive Management</li>
+    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Board of Directors</li>
+    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> Chairman</li>
+    <li class="checkbox-item"><input type="checkbox" class="internal-checkbox" /> CEO</li>
     <li class="checkbox-item">
         <input type="checkbox" class="internal-checkbox" id="internal-other-checkbox" /> Other - please explain:
         <input type="text" id="internal-other-text" name="internal_stakeholders_other_text" 
@@ -67,11 +65,14 @@
     4. When considering <b>external stakeholders</b>, who did you think about? (Select all that apply)
 </p>
 <ol id="external-stakeholders-list">
-    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Employees</li>
-    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Executive Management</li>
-    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Board of Directors</li>
-    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Chairman</li>
-    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> CEO</li>
+
+    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Investors</li>
+    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Suppliers</li>
+    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Customers</li>
+    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Regulators</li>
+    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> NGOs</li>
+    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Community</li>
+    <li class="checkbox-item"><input type="checkbox" class="external-checkbox" /> Media</li>
     <li class="checkbox-item">
         <input type="checkbox" class="external-checkbox" id="external-other-checkbox" /> Other - please explain:
         <input type="text" id="external-other-text" name="external_stakeholders_other_text" 
