--- a/spec_design/Background.html
+++ b/spec_design/Background.html
@@ -1,23 +1,23 @@
-{{ block title }}Instructions (2 of 4){{ endblock }}
+{{ block title }}About Livit Tech{{ endblock }}
 {{ block content }}
 
 <p>
-    Livit Tech has implemented a comprehensive risk management strategy to address uncertainties in the evolving landscape of care for older adults. 
-    This strategy includes proactive monitoring of regulatory changes, investment in AI-driven care solutions, and fostering adaptability to meet shifting societal preferences.
+    Livit Tech is developing an <b>End of Life Care Machine</b>, an automated healthcare solution designed to provide comfort and support during patients' final moments. The technology includes:
 </p>
+
 <ul>
-    <li>Regular audits to ensure compliance with stringent regulatory requirements</li>
-    <li>Development of scalable AI technologies to enhance care delivery</li>
-    <li>Engagement with stakeholders to align solutions with societal needs</li>
+    <li>Advanced <b>voice interaction systems</b> for patient comfort</li>
+    <li><b>Robotic assistance</b> capabilities for physical support</li>
+    <li><b>Automated care</b> delivery mechanisms</li>
 </ul>
 
 <p>
-    By prioritizing these measures, Livit Tech aims to mitigate risks effectively while continuing to innovate in the field of elder care.
+    According to the Lead Designer, Dan Chen, this innovative yet sensitive healthcare automation project represents a <b>significant technological advancement</b> in patient care. However, it <b>also raises important questions</b> about the intersection of healthcare automation, patient dignity, and ethical care delivery.
 </p>
 
 <!-- Add the image -->
 <div style="text-align: center; margin-top: 20px;">
-    <img src="{% static 'images/livit.jpg' %}" alt="VitaTech Logo" style="max-width: 100%; height: auto;">
+    <img src="{% static 'images/livit.jpg' %}" alt="Livit Tech Logo" style="max-width: 100%; height: auto;">
 </div>
 
 <p>{{ next_button }}</p>
