--- a/spec_design/Introduction.html
+++ b/spec_design/Introduction.html
@@ -1,26 +1,23 @@
-{{ block title }}Instructions (1 of 4){{ endblock }}
+{{ block title }}Welcome!{{ endblock }}
 {{ block content }}
 
 <p>
-    Thank you for your consent to participate in this study. 
+    <b>Thank you for your consent to participate in this study</b>. 
     Your participation is highly valued, and we thank you for your time. 
 </p>
 <p>
-    The next screen contains information about a hypothetical <b>healthcare technology company</b>, Livit Tech. 
-    You will be asked to <b>put yourself in the position of a risk manager</b> who is tasked to anticipate risks that could impact the development process of a new healthcare technology.
+    The next screen contains information about a hypothetical healthcare technology company, Livit Tech. 
+    You will be asked to put yourself in the position of a risk manager who is tasked to anticipate risks that could impact the preparation phase of a new healthcare technology.
 </p>
 
-<p> The <b>study will proceed as follows</b>:
+<p> <b>The study will proceed as follows</b>:
 </p>
 <ol style="margin-top: 20px; line-height: 1.8;">
-    <li>You learn about Livit Tech's existing risk management strategy.</li>
-    <li>You get more information about Livit Tech's envisioned new healthcare technology.</li>
-    <li>You anticipate risks for the new healthcare technology.</li>
+    <li>You get more information about Livit Tech's new healthcare technology.</li>
+    <li>You receive additional instructions that are relevant for your risk anticipation.</li>
+    <li>You are asked to anticipate risks for the new healthcare technology. Each risk you anticipate increases your payout by USD 0.25.</li>
 </ol>
 
-<p>
-    There are no right or wrong answers. 
-</p>
 <p>
     As the task requires a high level of concentration, it is important that you <b>complete it without interruption</b>.
 </p>
