--- a/spec_design/Welcome.html
+++ b/spec_design/Welcome.html
@@ -1,4 +1,4 @@
-{{ block title }}Welcome!{{ endblock }}
+{{ block title }}Consent{{ endblock }}
 {{ block content }}
 
 <ul style="margin-top: 20px; line-height: 1.8;">
