--- a/spec_design/Background.html
+++ b/spec_design/Background.html
@@ -1,4 +1,4 @@
-{{ block title }}About Livit Tech{{ endblock }}
+{{ block title }}<span style="display: none;">About Livit Tech</span>{{ endblock }}
 {{ block content }}
 
 <style>
