--- a/spec_design/Checks.html
+++ b/spec_design/Checks.html
@@ -1,4 +1,5 @@
-{{ block title }}Post-Task Questions{{ endblock }}
+{{ block title }}<span style="display: none;">Post-Task Questions</span>{{ endblock }}
+
 {{ block content }}
 
 <style>
