--- a/spec_design/Condition1.html
+++ b/spec_design/Condition1.html
@@ -1,4 +1,4 @@
-{{ block title }}Risk Anticipation Time Horizon{{ endblock }}
+{{ block title }}<span style="display: none;">Risk Anticipation Time Horizon</span>{{ endblock }}
 {{ block content }}
 
 <style>
