--- a/spec_design/Controls.html
+++ b/spec_design/Controls.html
@@ -1,4 +1,5 @@
-{{ block title }}Video Feedback Questions{{ endblock }}
+{{ block title }}<span style="display: none;">Video Feedback Questions</span>{{ endblock }}
+
 {{ block content }}
 
 <style>
