--- a/spec_design/Introduction.html
+++ b/spec_design/Introduction.html
@@ -1,4 +1,5 @@
-{{ block title }}Welcome!{{ endblock }}
+{{ block title }}<span style="display: none;">Welcome</span>{{ endblock }}
+
 {{ block content }}
 
 <style>
