--- a/spec_design/Welcome.html
+++ b/spec_design/Welcome.html
@@ -1,4 +1,5 @@
-{{ block title }}Consent{{ endblock }}
+{{ block title }}<span style="display: none;">Consent</span>{{ endblock }}
+
 {{ block content }}
 
 <style>
