--- a/stakeholder/Assessment.html
+++ b/stakeholder/Assessment.html
@@ -1,7 +1,7 @@
 {{ block title }}Target Price Assessment{{ endblock }}
 {{ block content }}
 
-<h5>Set Your 12-Month Target Price</h5>
+<h5>Set Your Target Price</h5>
 
 <p>
     As a financial analyst, you are asked to provide your target price assessment for Acme LLC, considering recent developments and the stakeholder engagement initiative:
@@ -21,7 +21,7 @@
     <div class="card-body">
         <h5>Price Assessment</h5>
         <!-- Price Range -->
-        <p>Current Price: $50.00 (Range: $30.00 - $70.00)</p>        <!-- Input Controls -->
+        <p>Yesterday's Stock Price: $50.00 (Range: $30.00 - $70.00)</p>        <!-- Input Controls -->
         <div class="form-group">
             <input type="range" 
                    id="price_slider" 
