--- a/stakeholder/Condition2.html
+++ b/stakeholder/Condition2.html
@@ -5,9 +5,9 @@
     </p>
     
 
-    {% if stakeholder_consensus == 'Negative Stakeholder Consensus' %}
+    {% if stakeholder_consensus == 'Low Stakeholder Consensus' %}
     <p>
-        The <b>negative trendline</b> indicates a <b>negative consensus</b> between the internal and external stakeholder priorities. 
+        The <b>downward facing trendline</b> indicates a <b>low consensus</b> between the internal and external stakeholder priorities. 
         In other words, internal stakeholders deem ESG themes as relevant that are not deemed as relevant by external stakeholders and vice versa.
     </p>
     <img src="/static/images/Negative.png" alt="Figure1" style="max-width:100%; height:auto;">
@@ -16,9 +16,9 @@
             On the vertical (y-axis) of the chart, you see how external stakeholders prioritized the different ESG themes.
         </p>
 
-    {% elif stakeholder_consensus == 'Positive Stakeholder Consensus' %}
+    {% elif stakeholder_consensus == 'High Stakeholder Consensus' %}
     <p>
-        The <b>positive trendline</b> indicates a <b>positive consensus</b> between the internal and external stakeholder priorities. 
+        The <b>upward facing trendline</b> indicates a <b>high consensus</b> between the internal and external stakeholder priorities. 
         In other words, <b>internal stakeholders deem ESG themes as relevant that are also deemed as relevant by external stakeholders and vice versa</b>.
     </p>
     <img src="/static/images/Positive.png" alt="Figure1" style="max-width:100%; height:auto;">
