--- a/stakeholder/Introduction.html
+++ b/stakeholder/Introduction.html
@@ -3,7 +3,6 @@
 
 <div class="card mb-3">
     <div class="card-body">
-        <h4>Introduction</h4>
         
         <div class="form-group mb-4">
             <p class="card-text">
@@ -13,27 +12,23 @@
         </div>
 
         <div class="form-group mb-4">
-            <p class="card-text mb-3">
-                The next screen contains information <b>about a hypothetical publicly traded company</b>, Acme LLC. 
-                You will be asked to <b>put yourself in the position of an investment analyst</b> who evaluates Acme's risk profile in light of their latest stakeholder engagement initiative.
-            </p>
             <p class="card-text">
-                First, you will receive information about Acme's stakeholder engagement process for environmental, social and governance <b>(ESG) theme prioritization</b>. 
-                You will then be asked to <b>assess the company's risk</b> by modeling the Altman Z-score - an established risk indicator.
+                The next screen contains information <b>about a hypothetical publicly traded company</b>, Acme LLC. 
+                As an investment analyst, you will be asked to <b>set a target price</b> for Acme's stock after reviewing their newest disclosures on their environmental, social, and governance (ESG) materiality analysis.
             </p>
         </div>
 
         <div class="form-group mb-4">
-            <h5>The study will proceed as follows:</h5>
+            <b>The study will proceed as follows:</b>
             <ol>
-                <li class="mb-2">You see a fellow analyst's risk assessment from the previous year.</li>
-                <li class="mb-2">You learn about the company's stakeholder engagement initiative.</li>
-                <li>You make a risk assessment for the new year.</li>
+                <li class="mb-2">You see a fellow analyst's assessment from one day prior .</li>
+                <li class="mb-2">You review the firm's disclosure on their ESG materiality assessment.</li>
+                <li>You set your target price for the stock.</li>
             </ol>
         </div>
 
         <div class="form-group">
-            <h5>Important Note:</h5>
+            <b>Important Note:</b>
             <ul class="list-unstyled">
                 <li class="mb-2">• There are no right or wrong answers.</li>
                 <li>• As the task requires a high level of concentration, it is important that you <b>complete it without interruption</b>.</li>
