--- a/stakeholder/Demographics.html
+++ b/stakeholder/Demographics.html
@@ -3,14 +3,13 @@
 
 <div class="card mb-3">
     <div class="card-body">
-        <h4>Participant Information</h4>
         <p>Please provide some information about yourself to help us better understand different perspectives in this study.</p>
     </div>
 </div>
 
 <div class="card mb-3">
     <div class="card-body">
-        <h5>1. Age Range</h5>
+        <h5>1. Age</h5>
         <div class="form-group">
             {{ formfield 'age' }}
             {{ formfield_errors 'age' }}
@@ -38,7 +37,7 @@
     </div>
 </div><div class="card mb-3">
     <div class="card-body">
-        <h5>4. Professional Experience</h5>
+        <h5>4. Analyst Experience</h5>
         <div class="form-group">
             {{ formfield 'finance_experience' }}
             {{ formfield_errors 'finance_experience' }}
@@ -48,7 +47,7 @@
 
 <div class="card mb-3">
     <div class="card-body">
-        <h5>5. Professional Activities</h5>
+        <h5>5. Current Investment Activities</h5>
 
         <!-- Investment Research -->
         <div class="form-group mb-4">
