--- a/stakeholder/Strategy.html
+++ b/stakeholder/Strategy.html
@@ -3,7 +3,7 @@
 
 <div class="card mb-3">
     <div class="card-body">
-        <h4>Company Strategy</h4>
+        <!-- <h4>Company Strategy</h4> -->
         
         <div class="form-group mb-4">
             <p class="card-text">
