--- a/stakeholder/Thanks.html
+++ b/stakeholder/Thanks.html
@@ -2,7 +2,7 @@
 {{ block content }}
 
 <p style="color: green; font-weight: bold; text-align: center;">
-    Congratulations! You have successfully completed the experiment.
+    Congratulations! You have successfully completed the study.
 </p>
 
 <p>
